--- a/res/layout/activity_desktop.xml
+++ b/res/layout/activity_desktop.xml
@@ -53,6 +53,13 @@
             android:contentDescription="@string/imagedescription"
             android:src="@drawable/small_logo"
             android:visibility="visible" />
+        <TextView
+            android:id="@+id/version_desktop"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@+id/logo_small_desktop"
+            android:gravity="center"
+            android:textColor="#ffffff" />
 
         <RelativeLayout
             android:id="@+id/apps_desktop"
