--- a/res/layout/activity_desktop.xml
+++ b/res/layout/activity_desktop.xml
@@ -119,9 +119,22 @@
                 android:visibility="visible"
                 attr:index="5" />
 
+            <!--
             <life.leek.launcher.customwidget.AppIcon
                 android:id="@+id/app6_desktop"
                 android:layout_width="415dp"
+                android:layout_height="175dp"
+                android:layout_below="@+id/app2_desktop"
+                android:layout_marginLeft="30dp"
+                android:layout_marginTop="5dp"
+                android:layout_toRightOf="@+id/app1_desktop"
+                android:background="@drawable/app6"
+                android:visibility="visible"
+                attr:index="6" />
+            -->
+            <life.leek.launcher.customwidget.AppIcon
+                android:id="@+id/app6_desktop"
+                android:layout_width="205dp"
                 android:layout_height="175dp"
                 android:layout_below="@+id/app2_desktop"
                 android:layout_marginLeft="30dp"
@@ -135,7 +148,7 @@
                 android:id="@+id/app7_desktop"
                 android:layout_width="205dp"
                 android:layout_height="175dp"
-                android:layout_below="@+id/app4_desktop"
+                android:layout_below="@+id/app3_desktop"
                 android:layout_marginLeft="5dp"
                 android:layout_marginTop="5dp"
                 android:layout_toRightOf="@+id/app6_desktop"
@@ -147,7 +160,7 @@
                 android:id="@+id/app8_desktop"
                 android:layout_width="205dp"
                 android:layout_height="175dp"
-                android:layout_below="@+id/app5_desktop"
+                android:layout_below="@+id/app4_desktop"
                 android:layout_marginLeft="5dp"
                 android:layout_marginTop="5dp"
                 android:layout_toRightOf="@+id/app7_desktop"
@@ -157,12 +170,12 @@
 
             <life.leek.launcher.customwidget.AppIcon
                 android:id="@+id/app9_desktop"
-                android:layout_width="85dp"
-                android:layout_height="85dp"
-                android:layout_below="@+id/app6_desktop"
-                android:layout_marginLeft="30dp"
-                android:layout_marginTop="30dp"
-                android:layout_toRightOf="@+id/app1_desktop"
+                android:layout_width="205dp"
+                android:layout_height="175dp"
+                android:layout_below="@+id/app5_desktop"
+                android:layout_marginLeft="5dp"
+                android:layout_marginTop="5dp"
+                android:layout_toRightOf="@+id/app8_desktop"
                 android:background="@drawable/app9"
                 android:visibility="visible"
                 attr:index="9" />
@@ -172,12 +185,25 @@
                 android:layout_width="85dp"
                 android:layout_height="85dp"
                 android:layout_below="@+id/app6_desktop"
-                android:layout_marginLeft="3dp"
+                android:layout_marginLeft="30dp"
                 android:layout_marginTop="30dp"
-                android:layout_toRightOf="@+id/app9_desktop"
+                android:layout_toRightOf="@+id/app1_desktop"
                 android:background="@drawable/app10"
                 android:visibility="visible"
                 attr:index="10" />
+
+            <life.leek.launcher.customwidget.AppIcon
+                android:id="@+id/app11_desktop"
+                android:layout_width="85dp"
+                android:layout_height="85dp"
+                android:layout_below="@+id/app6_desktop"
+                android:layout_marginLeft="3dp"
+                android:layout_marginTop="30dp"
+                android:layout_toRightOf="@+id/app10_desktop"
+                android:background="@drawable/app11"
+                android:visibility="visible"
+                attr:index="11" />
+            
         </RelativeLayout>
     </RelativeLayout>
 
